--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,41 @@ img {
     max-width: 100%; /* Bredde må maks fylde 100% */
     height: auto; /* Højden skal tilpasse sig */
 }
+.navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: lightpink;
+    height: 60px;
+    font-family: "Calibri Light", Arial;
+
+}
+
+.navigation a {
+    margin: 0 1rem;
+    text-decoration: none;
+    color: #ffffff;
+
+}
+
+a:hover {
+    color: #000000;
+}
+
+
+.main {
+    padding: 1rem;
+    font-family: "Calibri Light", Arial;
+    min-height: calc(100vh - 50px - 200px);
+}
+
+.footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 200px;
+    background-color: lightpink;
+    color: #ffffff;
+    font-family: "Calibri Light", Arial;
+
+}
